# sudoku-solver

./: .gitignore  CMakeLists.txt  README.md
include/: board.h  solver.h
src/: board.cpp  main.cpp  solver.cpp
